--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,15 +5,17 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Best Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Best Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+	<!-- js -->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/modernizr-custom.js"></script>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!-- js -->
-<script src="js/jquery.min.js"></script>
 <!-- //js -->
 <!-- cart -->
 <script src="js/simpleCart.min.js"></script>
@@ -21,20 +23,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- for bootstrap working -->
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
 <!-- //for bootstrap working -->
- 
+
 <link rel="stylesheet" href="css/jquery.countdown.css" />
 <!-- //timer -->
 <!-- animation-effect -->
-<link href="css/animate.min.css" rel="stylesheet"> 
+<link href="css/animate.min.css" rel="stylesheet">
 <script src="js/wow.min.js"></script>
 <script>
  new WOW().init();
 </script>
 <!-- //animation-effect -->
+
+	<!--导入布局js，共享header和footer-->
+
 </head>
 	
 <body>
-<!-- header -->
+<!-- header-->
 	<div class="header">
 		<div class="container">
 			<div class="header-grid">
@@ -70,10 +75,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-					</div> 
+					</div>
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="index.html" class="act">Home</a></li>	
+							<li class="active"><a href="index.html" class="act">Home</a></li>
 							<!-- Mega Menu -->
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
@@ -187,7 +192,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
 						<div class="clearfix"> </div>
-					</div>	
+					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -202,21 +207,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h4>Up to <span>50% <i>Off/-</i></span></h4>
 				<div class="wmuSlider example1">
 					<div class="wmuSliderWrapper">
-						<article style="position: absolute; width: 100%; opacity: 0;"> 
+						<article style="position: absolute; width: 100%; opacity: 0;">
 							<div class="banner-wrap">
 								<div class="banner-info1">
 									<p>T-Shirts + Formal Pants + Jewellery + Cosmetics</p>
 								</div>
 							</div>
 						</article>
-						<article style="position: absolute; width: 100%; opacity: 0;"> 
+						<article style="position: absolute; width: 100%; opacity: 0;">
 							<div class="banner-wrap">
 								<div class="banner-info1">
 									<p>Toys + Furniture + Lighting + Watches</p>
 								</div>
 							</div>
 						</article>
-						<article style="position: absolute; width: 100%; opacity: 0;"> 
+						<article style="position: absolute; width: 100%; opacity: 0;">
 							<div class="banner-wrap">
 								<div class="banner-info1">
 									<p>Tops + Books & Media + Sports</p>
@@ -225,10 +230,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</article>
 					</div>
 				</div>
-					<script src="js/jquery.wmuSlider.js"></script> 
+					<script src="js/jquery.wmuSlider.js"></script>
 					<script>
-						$('.example1').wmuSlider();         
-					</script> 
+						$('.example1').wmuSlider();
+					</script>
 			</div>
 		</div>
 	</div>
