--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -28,6 +28,48 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  new WOW().init();
 </script>
 <!-- //animation-effect -->
+	<script src="js/getParameter.js"></script>
+	<script>
+		$(function () {
+			findCount(1);
+		})
+		function addToCart(uid, gid) {
+			$.get(
+					"/shop/cart/addOne",
+					{uid : uid, gid : gid},
+					function () {
+						findCount(1)
+					},
+					"json"
+			)
+		}
+		function findCount(uid) {
+			$.get(
+					"/shop/cart/findAll",
+					{uid : uid},
+					function (cartList) {
+						var count = 0;
+						if (cartList != null){
+							for (var i = 0;  i < cartList.length ; i++){
+								count += cartList[i].number;
+							}
+						}
+						$("#simpleCart_quantity").html(count);
+					},
+					"json"
+			)
+		}
+		function clearCart(uid) {
+			$.get(
+					"/shop/cart/clearCart",
+					{uid : uid},
+					function () {
+						findCount(uid);
+					},
+					"json"
+			)
+		}
+	</script>
 </head>
 	
 <body>
@@ -176,13 +218,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="header-right">
 					<div class="cart box_1">
-						<a href="checkout.html">
+						<a href="/shop/checkout.html">
 							<h3> <div class="total">
 								<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)</div>
 								<img src="images/bag.png" alt="" />
 							</h3>
 						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
+						<p><a href="javascript:clearCart(1);" class="simpleCart_empty">Empty Cart</a></p>
 						<div class="clearfix"> </div>
 					</div>	
 				</div>
@@ -289,7 +331,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-7 single-right-left simpleCart_shelfItem animated wow slideInRight" data-wow-delay=".5s">
 					<h3>Men's Solid Casual Shirt</h3>
-					<h4><span class="item_price">$550</span> - $900</h4>
+					<h4><span class="item_price">$400</span> - $900</h4>
 					<div class="rating1">
 						<span class="starRating">
 							<input id="rating5" type="radio" name="rating" value="5">
@@ -344,7 +386,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 					<div class="occasion-cart">
-						<a class="item_add" href="#">add to cart </a>
+						<a class="item_add" href="javascript:addToCart(1, 1)">add to cart </a>
 					</div>
 					<div class="social">
 						<div class="social-left">
@@ -477,7 +519,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h4><a href="single.html">Running Shoes</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="#">add to cart </a></p>
+							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="javascript:addToCart(1, 2)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
@@ -513,7 +555,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h4><a href="single.html">Wall Lamp</a></h4>
 							<p>Vel illum qui dolorem eum fugiat.</p>
 							<div class="new-collections-grid1-left simpleCart_shelfItem">
-								<p><i>$480</i> <span class="item_price">$400</span><a class="item_add" href="#">add to cart </a></p>
+								<p><i>$480</i> <span class="item_price">$400</span><a class="item_add" href="javascript:addToCart(1, 3)">add to cart </a></p>
 							</div>
 						</div>
 					</div>
@@ -548,7 +590,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<h4><a href="single.html">Wall Lamp</a></h4>
 							<p>Vel illum qui dolorem eum fugiat.</p>
 							<div class="new-collections-grid1-left simpleCart_shelfItem">
-								<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="#">add to cart </a></p>
+								<p><i style="font-size: 13px">$280</i> <span class="item_price" >$150</span><a class="item_add" href="javascript:addToCart(1, 4)">add to cart </a></p>
 							</div>
 						</div>
 					</div>
@@ -585,7 +627,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h4><a href="single.html">Stones Bangles</a></h4>
 						<p>Vel illum qui dolorem eum fugiat.</p>
 						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$340</i> <span class="item_price">$257</span><a class="item_add" href="#">add to cart </a></p>
+							<p><i>$340</i> <span class="item_price">$257</span><a class="item_add" href="javascript:addToCart(1, 5)">add to cart </a></p>
 						</div>
 					</div>
 				</div>
