--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -308,79 +308,93 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- collections -->
 	<div class="new-collections">
 		<div class="container">
+
 			<h3 class="animated wow zoomIn" data-wow-delay=".5s">New Collections</h3>
 			<p class="est animated wow zoomIn" data-wow-delay=".5s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
 				deserunt mollit anim id est laborum.</p>
 			<div class="new-collections-grids">
 				<div class="col-md-3 new-collections-grid">
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
-						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>
-							<div class="new-collections-grid1-image-pos">
-								<a href="single.html">Quick View</a>
-							</div>
-							<div class="new-collections-grid1-right">
-								<div class="rating">
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="clearfix"> </div>
-								</div>
-							</div>
-						</div>
-						<h4><a href="single.html">Formal Shirt</a></h4>
-						<p>Vel illum qui dolorem eum fugiat.</p>
-						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="#">add to cart </a></p>
-						</div>
+
+
+
+<!--						<div class="new-collections-grid1-image">-->
+<!--							<a href="single.html" class="product-image"><img src="images/7.jpg" alt=" " class="img-responsive" /></a>-->
+<!--							<div class="new-collections-grid1-image-pos">-->
+<!--								<a href="single.html">Quick View</a>-->
+<!--							</div>-->
+<!--							<div class="new-collections-grid1-right">-->
+<!--								<div class="rating">-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="clearfix"> </div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<h4><a href="single.html?gid=1">Formal Shirt</a></h4>-->
+<!--						<p>Vel illum qui dolorem eum fugiat.</p>-->
+<!--						<div class="new-collections-grid1-left simpleCart_shelfItem">-->
+<!--							<p><i>$325</i> <span class="item_price">$250</span><a class="item_add" href="#">add to cart </a></p>-->
+<!--						</div>-->
+
 					</div>
+
+
+
 					<div class="new-collections-grid1 animated wow slideInUp" data-wow-delay=".5s">
-						<div class="new-collections-grid1-image">
-							<a href="single.html" class="product-image"><img src="images/8.jpg" alt=" " class="img-responsive" /></a>
-							<div class="new-collections-grid1-image-pos">
-								<a href="single.html">Quick View</a>
-							</div>
-							<div class="new-collections-grid1-right">
-								<div class="rating">
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive" />
-									</div>
-									<div class="clearfix"> </div>
-								</div>
-							</div>
-						</div>
-						<h4><a href="single.html">Running Shoes</a></h4>
-						<p>Vel illum qui dolorem eum fugiat.</p>
-						<div class="new-collections-grid1-left simpleCart_shelfItem">
-							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="#">add to cart </a></p>
-						</div>
-					</div>
+
+
+<!--						<div class="new-collections-grid1-image">-->
+<!--							<a href="single.html" class="product-image"><img src="images/8.jpg" alt=" " class="img-responsive" /></a>-->
+<!--							<div class="new-collections-grid1-image-pos">-->
+<!--								<a href="single.html">Quick View</a>-->
+<!--							</div>-->
+<!--							<div class="new-collections-grid1-right">-->
+<!--								<div class="rating">-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive" />-->
+<!--									</div>-->
+<!--									<div class="clearfix"> </div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<h4><a href="single.html">Running Shoes</a></h4>-->
+<!--						<p>Vel illum qui dolorem eum fugiat.</p>-->
+<!--						<div class="new-collections-grid1-left simpleCart_shelfItem">-->
+<!--							<p><i>$280</i> <span class="item_price">$150</span><a class="item_add" href="#">add to cart </a></p>-->
+<!--						</div>-->
+<!--					</div>-->
+
 				</div>
+
 				<div class="col-md-6 new-collections-grid">
+
+
 					<div class="new-collections-grid1 new-collections-grid1-image-width animated wow slideInUp" data-wow-delay=".5s">
 						<div class="new-collections-grid1-image">
 							<a href="single.html" class="product-image"><img src="images/5.jpg" alt=" " class="img-responsive" /></a>
