--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -59,9 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					function(pb) {
 						// pb就是pageBean对象的json格式
 						// 1.将totalCount更新
-						$("#totalCount").html(pb.totalCount);
-						// 2.将totalPage更新
-						$("#totalPage").html(pb.totalPage);
+
 						// 3.更新页码 - 首页-上一页-末页-下一页
 						// 前5 后4
 						var start = pb.currentPage - 5;
@@ -118,6 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						var divlist7='';
 						var divlist8='';
 						var divlist9='';
+						var leftdivlist='';
 
 						for (var i=0;i<pb.list.length;i++){
 							var good = pb.list[i];
@@ -150,9 +149,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									'\t\t\t\t\t\t\t<h4><a href="single.html?gid='+good.gid+'">'+good.gname+'</a></h4>\n' +
 									'\t\t\t\t\t\t\t<p>Vel illum qui dolorem.</p>\n' +
 									'\t\t\t\t\t\t\t<div class="simpleCart_shelfItem products-right-grid1-add-cart">\n' +
-									'\t\t\t\t\t\t\t\t<p><i>$'+good.price*2+'</i> <span class="item_price">$'+good.price+'</span><a class="item_add" href="javascript:load('+good.gid+', '+uid+')">add to cart </a></p>\n' +
+									'\t\t\t\t\t\t\t\t<p><i>$'+good.price*2+'</i> <span class="item_price">$'+good.price+'</span><a class="item_add" href="#">add to cart </a></p>\n' +
 									'\t\t\t\t\t\t\t</div>';
-									switch (i) {
+
+							var leftdiv='<div class="new-products-grid">\n' +
+									'\t\t\t\t\t\t\t<div class="new-products-grid-left">\n' +
+									'\t\t\t\t\t\t\t\t<a href="single.html?gid='+good.gid+'"><img src="'+good.gimage+'" alt=" " class="img-responsive" /></a>\n' +
+									'\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t<div class="new-products-grid-right">\n' +
+									'\t\t\t\t\t\t\t\t<h4><a href="single.html">'+good.gname+'</a></h4>\n' +
+									'\t\t\t\t\t\t\t\t<div class="rating">\n' +
+									'\t\t\t\t\t\t\t\t\t<div class="rating-left">\n' +
+									'\t\t\t\t\t\t\t\t\t\t<img src="images/2.png" alt=" " class="img-responsive">\n' +
+									'\t\t\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t\t\t<div class="rating-left">\n' +
+									'\t\t\t\t\t\t\t\t\t\t<img src="images/2.png" alt=" " class="img-responsive">\n' +
+									'\t\t\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t\t\t<div class="rating-left">\n' +
+									'\t\t\t\t\t\t\t\t\t\t<img src="images/2.png" alt=" " class="img-responsive">\n' +
+									'\t\t\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t\t\t<div class="rating-left">\n' +
+									'\t\t\t\t\t\t\t\t\t\t<img src="images/1.png" alt=" " class="img-responsive">\n' +
+									'\t\t\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t\t\t<div class="rating-left">\n' +
+									'\t\t\t\t\t\t\t\t\t\t<img src="images/1.png" alt=" " class="img-responsive">\n' +
+									'\t\t\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t\t\t<div class="clearfix"> </div>\n' +
+									'\t\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t\t<div class="simpleCart_shelfItem new-products-grid-right-add-cart">\n' +
+									'\t\t\t\t\t\t\t\t\t<p> <span class="item_price">$'+good.price+'</span><a class="item_add" href="#">add to cart </a></p>\n' +
+									'\t\t\t\t\t\t\t\t</div>\n' +
+									'\n' +
+									'\t\t\t\t\t\t\t</div>\n' +
+									'\t\t\t\t\t\t\t<div class="clearfix"> </div>\n' +
+									'\t\t\t\t\t\t</div>';
+
+
+
+							switch (i) {
 										case 0:divlist1+=div ;break;
 										case 1:divlist2+=div ;break;
 										case 2:divlist3+=div ;break;
@@ -161,7 +195,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										case 5:divlist6+=div ;break;
 										case 6:divlist7+=div ;break;
 										case 7:divlist8+=div ;break;
-										default:divlist9+=div ;
+										case 8:divlist9+=div ;break;
+										case 9:leftdivlist+=leftdiv ;break;
+										case 10: leftdivlist+=leftdiv;break;
+										default:leftdivlist+=leftdiv ;
 
 									}
 
@@ -176,10 +213,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						$("#list7").html(divlist7);
 						$("#list8").html(divlist8);
 						$("#list9").html(divlist9);
+						$("#leftlist").html(leftdivlist);
+						if(pb.list.length<=9){
+							$("#leftliststart").css("display", "none");
+						}
+						if(pb.currentPage<pb.totalPage){
+							$("#leftliststart").css("display", "block");
+						}
 
 			},'json'
 			)};
 	</script>
+
 <!-- //animation-effect -->
 </head>
 	
@@ -406,100 +451,107 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 					</ul>
 				</div>
-				<div class="new-products animated wow slideInUp" data-wow-delay=".5s">
+				<div class="new-products animated wow slideInUp" data-wow-delay=".5s" id="leftliststart">
+
 					<h3>New Products</h3>
-					<div class="new-products-grids">
-						<div class="new-products-grid">
-							<div class="new-products-grid-left">
-								<a href="single.html"><img src="images/6.jpg" alt=" " class="img-responsive" /></a>
-							</div>
-							<div class="new-products-grid-right">
-								<h4><a href="single.html">occaecat cupidatat</a></h4>
-								<div class="rating">
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive">
-									</div>
-									<div class="clearfix"> </div>
-								</div>
-								<div class="simpleCart_shelfItem new-products-grid-right-add-cart">
-									<p> <span class="item_price">$180</span><a class="item_add" href="#">add to cart </a></p>
-								</div>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-						<div class="new-products-grid">
-							<div class="new-products-grid-left">
-								<a href="single.html"><img src="images/26.jpg" alt=" " class="img-responsive" /></a>
-							</div>
-							<div class="new-products-grid-right">
-								<h4><a href="single.html">eum fugiat quo</a></h4>
-								<div class="rating">
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive">
-									</div>
-									<div class="clearfix"> </div>
-								</div>
-								<div class="simpleCart_shelfItem new-products-grid-right-add-cart">
-									<p> <span class="item_price">$250</span><a class="item_add" href="#">add to cart </a></p>
-								</div>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-						<div class="new-products-grid">
-							<div class="new-products-grid-left">
-								<a href="single.html"><img src="images/11.jpg" alt=" " class="img-responsive" /></a>
-							</div>
-							<div class="new-products-grid-right">
-								<h4><a href="single.html">officia deserunt</a></h4>
-								<div class="rating">
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/2.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive">
-									</div>
-									<div class="rating-left">
-										<img src="images/1.png" alt=" " class="img-responsive">
-									</div>
-									<div class="clearfix"> </div>
-								</div>
-								<div class="simpleCart_shelfItem new-products-grid-right-add-cart">
-									<p> <span class="item_price">$259</span><a class="item_add" href="#">add to cart </a></p>
-								</div>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
+					<div class="new-products-grids" id="leftlist">
+<!--						<div class="new-products-grid">-->
+<!--							<div class="new-products-grid-left">-->
+<!--								<a href="single.html"><img src="images/6.jpg" alt=" " class="img-responsive" /></a>-->
+<!--							</div>-->
+<!--							<div class="new-products-grid-right">-->
+<!--								<h4><a href="single.html">occaecat cupidatat</a></h4>-->
+<!--								<div class="rating">-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="clearfix"> </div>-->
+<!--								</div>-->
+<!--								<div class="simpleCart_shelfItem new-products-grid-right-add-cart">-->
+<!--									<p> <span class="item_price">$180</span><a class="item_add" href="#">add to cart </a></p>-->
+<!--								</div>-->
+
+<!--							</div>-->
+<!--							<div class="clearfix"> </div>-->
+<!--						</div>-->
+
+
+<!--						<div class="new-products-grid">-->
+<!--							<div class="new-products-grid-left">-->
+
+<!--								<a href="single.html"><img src="images/26.jpg" alt=" " class="img-responsive" /></a>-->
+<!--							</div>-->
+<!--							<div class="new-products-grid-right">-->
+<!--								<h4><a href="single.html">eum fugiat quo</a></h4>-->
+<!--								<div class="rating">-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="clearfix"> </div>-->
+<!--								</div>-->
+<!--								<div class="simpleCart_shelfItem new-products-grid-right-add-cart">-->
+<!--									<p> <span class="item_price">$250</span><a class="item_add" href="#">add to cart </a></p>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="clearfix"> </div>-->
+<!--						</div>-->
+
+<!--						<div class="new-products-grid">-->
+<!--							<div class="new-products-grid-left">-->
+<!--								<a href="single.html"><img src="images/11.jpg" alt=" " class="img-responsive" /></a>-->
+<!--							</div>-->
+<!--							<div class="new-products-grid-right">-->
+<!--								<h4><a href="single.html">officia deserunt</a></h4>-->
+<!--								<div class="rating">-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/2.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="rating-left">-->
+<!--										<img src="images/1.png" alt=" " class="img-responsive">-->
+<!--									</div>-->
+<!--									<div class="clearfix"> </div>-->
+<!--								</div>-->
+<!--								<div class="simpleCart_shelfItem new-products-grid-right-add-cart">-->
+<!--									<p> <span class="item_price">$259</span><a class="item_add" href="#">add to cart </a></p>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="clearfix"> </div>-->
+<!--						</div>-->
 					</div>
+
 				</div>
 				<div class="men-position animated wow slideInUp" data-wow-delay=".5s">
 					<a href="single.html"><img src="images/27.jpg" alt=" " class="img-responsive" /></a>
