--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -109,7 +109,7 @@ $(function () {
 				'\t\t\t\t\t\t<div class="clearfix"> </div>\n' +
 				'\t\t\t\t\t</div>\n' +
 				'\t\t\t\t\t<div class="occasion-cart">\n' +
-				'\t\t\t\t\t\t<a class="item_add" href="javascript:load('+gid+', '+uid+')">add to cart </a>\n' +
+				'\t\t\t\t\t\t<a class="item_add" href="#">add to cart </a>\n' +
 				'\t\t\t\t\t</div>\n' +
 				'\t\t\t\t\t<div class="social">\n' +
 				'\t\t\t\t\t\t<div class="social-left">\n' +
