--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -38,6 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						function (data) {
 							if(data.flag){
 								location.href="index.html"
+								console.log("登录成功")
 							}else{
 
 							}
