--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -156,7 +156,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		// 			}
 		// 		}
 			})
+
 		})
+
 	</script>
 <!-- //animation-effect -->
 </head>
@@ -359,7 +361,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<input type="text" class="form-control" name="check" placeholder="请输入验证码">
 						</div>
 						<div class="col-sm-6">
-							<img src="/shop/checkCode" style="margin-top: 15px" height="32px" alt="" onclick="changeCheckCode(this)">
+							<img src="/shop/checkCode" id="checkcode"style="margin-top: 15px" height="32px" alt="" onclick="changeCheckCode(this)">
 							<script type="text/javascript">
 								//图片点击事件
 								function changeCheckCode(img) {
