--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -33,7 +33,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script>
 		$(function () {
 			$("#submit").click(function () {
-				$.post( "/shop/login",
+				$.post( "/shop/user/login",
 						$("#login").serialize(),
 						function (data) {
 							if(data.flag){
@@ -43,7 +43,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							}
 						},"json")
 			})
-		})
+		});
+
 	</script>
 <!-- //animation-effect -->
 </head>
@@ -57,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul>
 						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">@example.com</a></li>
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 <span>567</span> 892</li>
-						<li class="active"><i class="glyphicon glyphicon-log-in" aria-hidden="true"></i><a href="login.html">Login</a></li>
+						<li class="active"><i class="glyphicon glyphicon-log-in" aria-hidden="true"></i><a  href="login.html">Login</a></li>
 						<li><i class="glyphicon glyphicon-book" aria-hidden="true"></i><a href="register.html">Register</a></li>
 					</ul>
 				</div>
