--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -162,7 +162,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					{},
 					function (data) {
 							$("#_login").html("退出");
-							$("#_login").href="/shop/user/exit";
 					},'json')
 		})
 	</script>
@@ -301,8 +300,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<form>
 								<input class="sb-search-input" placeholder="Enter your search term..." type="search" id="search">
 								<input class="sb-search-submit" type="submit" value="">
-								<span class="sb-icon-search"> </span>
-							</form>
+								<span class="sb-icon-search"> </span
+
 						</div>
 					</div>
 						<!-- search-scripts -->
