--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -217,7 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									'\t\t\t\t\t\t\t<h4><a href="single.html?gid='+good.gid+'">'+good.gname+'</a></h4>\n' +
 									'\t\t\t\t\t\t\t<p>Vel illum qui dolorem.</p>\n' +
 									'\t\t\t\t\t\t\t<div class="simpleCart_shelfItem products-right-grid1-add-cart">\n' +
-									'\t\t\t\t\t\t\t\t<p><i>$'+good.price*2+'</i> <span class="item_price">$'+good.price+'</span><a class="item_add" href="#">add to cart </a></p>\n' +
+									'\t\t\t\t\t\t\t\t<p><i>$'+good.price*2+'</i> <span class="item_price">$'+good.price+'</span><a class="item_add" href="javascript:addToCart('+good.gid+')">add to cart </a></p>\n' +
 									'\t\t\t\t\t\t\t</div>';
 
 							var leftdiv='<div class="new-products-grid">\n' +
@@ -245,7 +245,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									'\t\t\t\t\t\t\t\t\t<div class="clearfix"> </div>\n' +
 									'\t\t\t\t\t\t\t\t</div>\n' +
 									'\t\t\t\t\t\t\t\t<div class="simpleCart_shelfItem new-products-grid-right-add-cart">\n' +
-									'\t\t\t\t\t\t\t\t\t<p> <span class="item_price">$'+good.price+'</span><a class="item_add" href="#">add to cart </a></p>\n' +
+									'\t\t\t\t\t\t\t\t\t<p> <span class="item_price">$'+good.price+'</span><a class="item_add" href="javascript:addToCart('+good.gid+')">add to cart </a></p>\n' +
 									'\t\t\t\t\t\t\t\t</div>\n' +
 									'\n' +
 									'\t\t\t\t\t\t\t</div>\n' +
