--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -135,7 +135,7 @@ $(function () {
 				'\t\t\t\t\t\t<div class="clearfix"> </div>\n' +
 				'\t\t\t\t\t</div>\n' +
 				'\t\t\t\t\t<div class="occasion-cart">\n' +
-				'\t\t\t\t\t\t<a class="item_add" href="#">add to cart </a>\n' +
+				'\t\t\t\t\t\t<a class="item_add" href="javascript:addToCart('+good.gid+')">add to cart </a>\n' +
 				'\t\t\t\t\t</div>\n' +
 				'\t\t\t\t\t<div class="social">\n' +
 				'\t\t\t\t\t\t<div class="social-left">\n' +
