--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -35,7 +35,7 @@ $(function () {
 			"/shop/user/findUser",
 			{},
 			function (data) {
-				if(data.uname!=null){
+				if(data != null){
 					//指向loginoutServlet
 					var msg='<a>欢迎回来,'+data.uname+'</a>' +
 							'<i class="glyphicon glyphicon-log-in" aria-hidden="true" style="margin-left: 25px"></i><a  href="/shop/user/logout">logout</a>';
