--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -397,7 +397,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<input type="radio" name="sex" id="female" value="女"> 女
 					</label>
 				<h6 >登录信息</h6>
-					<input type="text" placeholder="请输入邮箱" name="email">
+					<input type="email" placeholder="请输入邮箱" name="email">
 					<input type="password" placeholder="请输入密码" name="password">
 					<input type="password" placeholder="确认密码" name="repeatPassword">
 
