--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -33,8 +33,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						$("#login").serialize(),
 						function (data) {
 							if(data.flag){
-								location.href="index.html"
-								console.log("登录成功")
+								//登录成功则将cookie中的商品信息加入数据库的购物车表
+								$.get(
+										"/shop/cart/addCookies",
+										{},
+										function () {
+											location.href="index.html"
+											console.log("登录成功");
+										},
+										"json",
+								)
 							}else{
 								$("#alert").html("<div class=\"alert alert-danger\" role=\"alert\" style=\"margin-top: 20px\">\n" +
 										"\t\t\t\t\t\t<strong>邮箱或者密码错误!</strong> 请重新输入\n" +
